// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Price actions Should set the cost 1`] = `
Object {
  "payload": Object {
    "cost": 10,
  },
  "type": "SET_PRICE_COST",
}
`;

exports[`[STORE] - Price actions Should set the position of the symbol 1`] = `
Object {
  "payload": Object {
    "position": "suffix",
  },
  "type": "SET_PRICE_POSITION",
}
`;

exports[`[STORE] - Price actions Should set the price description 1`] = `
Object {
  "payload": Object {
    "description": "My description",
  },
  "type": "SET_PRICE_DESCRIPTION",
}
`;

exports[`[STORE] - Price actions Should set the symbol 1`] = `
Object {
  "payload": Object {
    "symbol": "€",
  },
  "type": "SET_PRICE_SYMBOL",
}
`;

exports[`[STORE] - Price actions Should toggle the prefix 1`] = `
Object {
  "payload": Object {
    "position": "prefix",
  },
  "type": "SET_PRICE_POSITION",
}
`;

exports[`[STORE] - Price actions Should toggle the prefix 2`] = `
Object {
  "payload": Object {
    "position": "suffix",
  },
  "type": "SET_PRICE_POSITION",
}
`;

exports[`[STORE] - Price thunk actions Should set the initial state 1`] = `
Array [
  Object {
    "payload": Object {
      "cost": 10,
    },
    "type": "SET_PRICE_COST",
  },
  Object {
    "payload": Object {
      "symbol": "€",
    },
    "type": "SET_PRICE_SYMBOL",
  },
  Object {
    "payload": Object {
      "description": "Not so expensive",
    },
    "type": "SET_PRICE_DESCRIPTION",
  },
  Object {
    "payload": Object {
      "position": "suffix",
    },
    "type": "SET_PRICE_POSITION",
  },
]
`;
